Test add stocktake comparaison

--- a/data/full-with-moves.org
+++ b/data/full-with-moves.org
@@ -3441,17 +3441,17 @@ M31L01DB#'KLB^2,#bd1m
 M31L01DB#'RAS^2,#bd1m
 M31L01DB#'RIS^2,#bd1m
 M31L01DB#'YVI^2,#bd1m
-#bd1m,^E01.02/[12]#bd1-moved
-#bd1m#-bd1-moved,^E01.03/[12]#bd1-moved
-#bd1m#-bd1-moved,^E01.04/[12]#bd1-moved
-#bd1m#-bd1-moved,^E01.05/[12]#bd1-moved
+#bd1m,^E01.02/[12]#1db-moved
+#bd1m#-1db-moved,^E01.03/[12]#1db-moved
+#bd1m#-1db-moved,^E01.04/[12]#1db-moved
+#bd1m#-1db-moved,^E01.05/[12]#1db-moved
 :END:
 :Deletes:
-M31L01DB#cloned#-bd1-moved
+M31L01DB#cloned#-1db-moved
 :END:
 :MovesAndTags:
 stock_id,tagm
-M31L01DB#-bd1-moved,E00.0[12]/3|E01.0[12345]/3
+M31L01DB#-1db-moved,E00.0[12]/3|E01.0[12345]/3
 :END:
 ** M91L04DN
 :Title:
@@ -3630,15 +3630,15 @@ M71L07DF#'LUP,#low#1row
 M71L07DF#'QUT,#low#1row
 M71L07DF#'TIV,#low#1row
 M71L07DF#'WEY,#low#1row
-M71L07DF#'l=7*,#'l=6600#'w=4200#'h=3800#big-fd7
+M71L07DF#'l=7*,#'l=6600#'w=4200#'h=3800#big-7df
 M71L07DF,#'l=6600#'w=4200#'h=3800
-M71L07DF#-low^3,#fd7-slot
-M71L07DF#'YAN^6,#fd7-slot
-M71L07DF#'RIS^6,#fd7-slot
-#fd7-slot,^E02.01/1/aab|E02.01/2#done
-#fd7-slot#-done,^E02.02/1/aab|E02.02/2#done
-#fd7-slot#-done,^E02.03/1/aab|E02.03/2#done
-#fd7-slot#-done,^E02.04/1/aab|E02.04/2#done
+M71L07DF#-low^3,#7df-slot
+M71L07DF#'YAN^6,#7df-slot
+M71L07DF#'RIS^6,#7df-slot
+#7df-slot,^E02.01/1/aab|E02.01/2#done
+#7df-slot#-done,^E02.02/1/aab|E02.02/2#done
+#7df-slot#-done,^E02.03/1/aab|E02.03/2#done
+#7df-slot#-done,^E02.04/1/aab|E02.04/2#done
 M71L07DF#low^3,E02.0*/1#done
 M71L07DF#-done#-low#-cloned,E02.0*/[3]#stock#done
 M71L07DF#-done#-low#-cloned,E02.0*/3|E02.0*/4#stock#done
@@ -3756,25 +3756,25 @@ M61L03DG#cloned,4,#cloned
 :END:
 :MovesAndTags:
 stock_id,tagm
-M61L03DG^1,#first-gd3#@content=50
-M61L03DG#-first-gd3,#@content=100
-M61L03DG#cloned#-first-gd3,#@content=1000
+M61L03DG^1,#first-3dg#@content=50
+M61L03DG#-first-3dg,#@content=100
+M61L03DG#cloned#-first-3dg,#@content=1000
 M61L03DG,pending
 M61L03DG^2,#gd3m
 M61L03DG#'KLB^4,#gd3m
 M61L03DG#'YAN^4,#gd3m
 M61L03DG#'RIS^4,#gd3m
-M61L03DG#first-gd3,#@start=new-slot
-#gd3m,^E03.03/[123]#gd3-moved
-#gd3m/error,^E03.04/[123]#gd3-moved
+M61L03DG#first-3dg,#@start=new-slot
+#gd3m,^E03.03/[123]#3dg-moved
+#gd3m/error,^E03.04/[123]#3dg-moved
 :END:
 :Deletes:
-M61L03DG#cloned#-gd3-moved
+M61L03DG#cloned#-3dg-moved
 :END:
 :MovesAndTags:
 stock_id,tagm
 M61L03DG,#-@start=new-slot
-M61L03DG#-gd3-moved,E03.0[34]/4|E04.01/4|E03.02/4
+M61L03DG#-3dg-moved,E03.0[34]/4|E04.01/4|E03.02/4
 M61L03DG,#mop-comment=CHECK & CLEAN HEADBANDS#mop-no-exception
 :END:
 :Orientations:
@@ -3887,11 +3887,11 @@ M61E05DW#'NAD,#low#3row
 M61E05DW#'TRG,#low#3row
 M61E05DW#'NEL,#low>3row
 M61E05DW,pending
-M61E05DW#'h=91*,#'l=5000#'w=4600#'h=7400#big-wd5
-M61E05DW^2,#wd5-slot
-#wd5-slot#-3row,^E04.01/[12] ^E04.02/[12] ^E04.03/[12] ^E04.04/[12]#done
-#wd5-slot#-done#-3row,E04.0*/3#done
-#wd5-slot#3row,E04.0[123]/3#done
+M61E05DW#'h=91*,#'l=5000#'w=4600#'h=7400#big-5dw
+M61E05DW^2,#5dw-slot
+#5dw-slot#-3row,^E04.01/[12] ^E04.02/[12] ^E04.03/[12] ^E04.04/[12]#done
+#5dw-slot#-done#-3row,E04.0*/3#done
+#5dw-slot#3row,E04.0[123]/3#done
 :END:
 :Deletes:
 M61E05DW#cloned#-done
@@ -4040,24 +4040,24 @@ M31L01DA#cloned,28,#cloned
 :END:
 :MovesAndTags:
 stock_id,tagm
-M31L01DA^1,#first-ad1#@content=50
-M31L01DA#-first-ad1,#@content=100
-M31L01DA#cloned#-first-ad1,#@content=1000
-M31L01DA#'ZBA,#ad1-old#@content=250#bg=brown
-M31L01DA#'ZAB,#ad1-old#@content=250#bg=brown
-M31L01DA#'KRB,#ad1-old#@content=250#bg=brown
-M31L01DA#'NOC,#ad1-old#@content=250#bg=brown
-M31L01DA#'GED,#ad1-old#@content=250#bg=brown
-M31L01DA#'OSE,#ad1-old#@content=250#bg=brown
-M31L01DA#'NGF,#ad1-old#@content=250#bg=brown
-M31L01DA#'AAM,#ad1-old#@content=250#bg=brown
-M31L01DA#'RTO,#ad1-old#@content=250#bg=brown
-M31L01DA#'REP,#ad1-old#@content=250#bg=brown
-M31L01DA#'OIP,#ad1-old#@content=250#bg=brown
-M31L01DA#'LHT,#ad1-old#@content=250#bg=brown
+M31L01DA^1,#first-1da#@content=50
+M31L01DA#-first-1da,#@content=100
+M31L01DA#cloned#-first-1da,#@content=1000
+M31L01DA#'ZBA,#1da-old#@content=250#bg=brown
+M31L01DA#'ZAB,#1da-old#@content=250#bg=brown
+M31L01DA#'KRB,#1da-old#@content=250#bg=brown
+M31L01DA#'NOC,#1da-old#@content=250#bg=brown
+M31L01DA#'GED,#1da-old#@content=250#bg=brown
+M31L01DA#'OSE,#1da-old#@content=250#bg=brown
+M31L01DA#'NGF,#1da-old#@content=250#bg=brown
+M31L01DA#'AAM,#1da-old#@content=250#bg=brown
+M31L01DA#'RTO,#1da-old#@content=250#bg=brown
+M31L01DA#'REP,#1da-old#@content=250#bg=brown
+M31L01DA#'OIP,#1da-old#@content=250#bg=brown
+M31L01DA#'LHT,#1da-old#@content=250#bg=brown
 M31L01DA,pending
 M31L01DA^4,#ad1m
-M31L01DA#ad1-old,#-ad1m
+M31L01DA#1da-old,#-ad1m
 M31L01DA#'YAN^28,#ad1m
 M31L01DA#'KLB^12,#ad1m
 M31L01DA#'RIS^12,#ad1m
@@ -4069,19 +4069,19 @@ M31L01DA#'KHC^8,#ad1m
 M31L01DA#'YOP^8,#ad1m
 M31L01DA#'YAC^8,#ad1m
 M31L01DA#'DNM^8,#ad1m
-M31L01DA#first-ad1,#@start=new-slot
-#ad1m,^E05.01/[123]#ad1-moved
-#ad1m#-ad1-moved,^E05.02/[123]#ad1-moved
-#ad1m#-ad1-moved^^^96,^E05.03/[123]#ad1-moved
-#ad1m#-ad1-moved,^E05.03/[23]#ad1-moved
+M31L01DA#first-1da,#@start=new-slot
+#ad1m,^E05.01/[123]#1da-moved
+#ad1m#-1da-moved,^E05.02/[123]#1da-moved
+#ad1m#-1da-moved^^^96,^E05.03/[123]#1da-moved
+#ad1m#-1da-moved,^E05.03/[23]#1da-moved
 :END:
 :Deletes:
-M31L01DA#cloned#-ad1-moved
+M31L01DA#cloned#-1da-moved
 :END:
 :MovesAndTags:
 stock_id,tagm
-M31L01DA#-ad1-moved,#-@start=new-slot
-#ad1-old^1,E05.03/1#ad1-moved#circle=white
+M31L01DA#-1da-moved,#-@start=new-slot
+#1da-old^1,E05.03/1#1da-moved#circle=white
 M31L01DA#'ZBA,#mop-exception
 M31L01DA#'ZAB,#mop-exception
 M31L01DA#'KRB,#mop-exception
@@ -4094,8 +4094,8 @@ M31L01DA#'RTO,#mop-exception
 M31L01DA#'REP,#mop-exception
 M31L01DA#'OIP,#mop-exception
 M31L01DA#'LHT,#mop-exception
-M31L01DA#-ad1-moved#-ad1-old,E05.0[1234]/4
-M31L01DA#ad1-old#-ad1-moved,E05.0[34]/4
+M31L01DA#-1da-moved#-1da-old,E05.0[1234]/4
+M31L01DA#1da-old#-1da-moved,E05.0[34]/4
 M31L01DA/#-top,#bar-title=${content}#no-bar-gauge
 :END:
 :Orientations:
@@ -4214,17 +4214,17 @@ M61W05PF/C1|C2|C3|pending|error,E06.03/3|E06.04/3
 :MovesAndTags:
 stock_id,tagm
 M61L03DB^1,#bd3m
-#bd3m^^^6,E06.04/1#bd3-moved#@global=200
-#bd3m#-bd3-moved,E06.05/1|E06.06/1#bd3-moved
-M61L03DB#-bd3-moved,E06.0[56]/3
+#bd3m^^^6,E06.04/1#3db-moved#@global=200
+#bd3m#-3db-moved,E06.05/1|E06.06/1#3db-moved
+M61L03DB#-3db-moved,E06.0[56]/3
 :END:
 ** M61W04HG
 :Title:
 :END:
 :MovesAndTags:
 stock_id,tagm
-M61W04HG^1,E06.06/1#gh4-moved
-M61W04HG#-gh4-moved,E06.05/3
+M61W04HG^1,E06.06/1#4hg-moved
+M61W04HG#-4hg-moved,E06.05/3
 M61W04HG,#mop-comment=10 Per Box#mop-no-exception
 :END:
 ** M81W01FZ
@@ -4246,8 +4246,8 @@ M81E02PU,E07.01/2
 :END:
 :MovesAndTags:
 stock_id,tagm
-M71E05PH^4,E07.01/1#hp5-moved
-M71E05PH#-hp5-moved,E07.01/3
+M71E05PH^4,E07.01/1#5ph-moved
+M71E05PH#-5ph-moved,E07.01/3
 :END:
 :Orientations:
 stock_id,orientation
@@ -4287,8 +4287,8 @@ M61W09BG,E07.04/2
 :END:
 :MovesAndTags:
 stock_id,tagm
-M61W02PO^1,E07.04/2#op2-moved
-M61W02PO#-op2-moved,E07.04/3
+M61W02PO^1,E07.04/2#2po-moved
+M61W02PO#-2po-moved,E07.04/3
 M61W02PO,#mop-comment=IF PICKING FROM DER TAKE TO OFFICE#mop-no-exception
 :END:
 ** M81W04PZ
@@ -4340,11 +4340,11 @@ M71E01PR,E08.03/0
 stock_id,tagm
 M31L01XA#'w=2700^1,#ax1m
 M31L01XA#'DEL,#-ax1m
-#ax1m,^E22.01/[123]#ax1-moved
-#ax1m#-ax1-moved,^E23.01/[123]#ax1-moved
-#ax1m#-ax1-moved,^E24.01/[123]#ax1-moved
-#ax1m#-ax1-moved,^E25.01/[123]#ax1-moved
-#ax1m#-ax1-moved,^E26.01/[123]#ax1-moved
+#ax1m,^E22.01/[123]#1xa-moved
+#ax1m#-1xa-moved,^E23.01/[123]#1xa-moved
+#ax1m#-1xa-moved,^E24.01/[123]#1xa-moved
+#ax1m#-1xa-moved,^E25.01/[123]#1xa-moved
+#ax1m#-1xa-moved,^E26.01/[123]#1xa-moved
 M31L01XA#-ax1m,E2[234567].01/4
 M31L01XA#'DEL,E27.01/4#mop-exception
 :END:
@@ -4534,8 +4534,8 @@ M02L04DE,E06.04/1
 :MovesAndTags:
 stock_id,tagm
 M02L04PK,pending
-M02L04PK,E06.0[56]/2#kp4-moved
-M02L04PK#-kp4-moved,E06.06/3
+M02L04PK,E06.0[56]/2#4pk-moved
+M02L04PK#-4pk-moved,E06.06/3
 :END:
 ** M02E06FF
 :Title:
@@ -4600,16 +4600,16 @@ C21M01ES,mop-comment= (By 5)#mop-no-exception
 :END:
 :MovesAndTags:
 stock_id,tagm
-M61L01HK^1,N01.01/1#kh1-moved
-M61L01HK#-kh1-moved,N01.01/2
+M61L01HK^1,N01.01/1#1hk-moved
+M61L01HK#-1hk-moved,N01.01/2
 :END:
 ** M71E05HT
 :Title:
 :END:
 :MovesAndTags:
 stock_id,tagm
-M71E05HT^1,N01.01/1#th5-moved
-M71E05HT#-th5-moved,N01.01/2
+M71E05HT^1,N01.01/1#5ht-moved
+M71E05HT#-5ht-moved,N01.01/2
 M71E05HT,#mop-comment=TAKE TO OFFICE#mop-no-exception
 :END:
 ** M61L03DE
@@ -4632,19 +4632,19 @@ M61L03DE#'DNM,#ed3m
 M61L03DE#'UBP^2,#ed3m
 M61L03DE#'ZQM^2,#ed3m
 M61L03DE#'LOC^2,#ed3m
-#ed3m,^N02.01/[12]#ed3-moved
-#ed3m#-ed3-moved,^N02.02/[12]#ed3-moved
-#ed3m#-ed3-moved,^N02.03/[12]#ed3-moved
-M61L03DE#-ed3-moved,#ed3extra
-#ed3extra^^^17,N02.01/3#ed3-moved
-#ed3extra#-ed3-moved^^^17,N02.02/3#ed3-moved
-#ed3extra#-ed3-moved^^^17,N02.03/3#ed3-moved
-#ed3extra#-ed3-moved^^^29,N01.01/[12]#ed3-moved
-#ed3extra#-ed3-moved^^^44,N01.02/[12]#ed3-moved
-#ed3extra#-ed3-moved^^^12,N01.03/2#ed3-moved
-#ed3extra#-ed3-moved^^^17,N03.01/3#ed3-moved
-#ed3extra#-ed3-moved^^^17,N03.02/3#ed3-moved
-#ed3extra#-ed3-moved,N03.03/3
+#ed3m,^N02.01/[12]#3de-moved
+#ed3m#-3de-moved,^N02.02/[12]#3de-moved
+#ed3m#-3de-moved,^N02.03/[12]#3de-moved
+M61L03DE#-3de-moved,#ed3extra
+#ed3extra^^^17,N02.01/3#3de-moved
+#ed3extra#-3de-moved^^^17,N02.02/3#3de-moved
+#ed3extra#-3de-moved^^^17,N02.03/3#3de-moved
+#ed3extra#-3de-moved^^^29,N01.01/[12]#3de-moved
+#ed3extra#-3de-moved^^^44,N01.02/[12]#3de-moved
+#ed3extra#-3de-moved^^^12,N01.03/2#3de-moved
+#ed3extra#-3de-moved^^^17,N03.01/3#3de-moved
+#ed3extra#-3de-moved^^^17,N03.02/3#3de-moved
+#ed3extra#-3de-moved,N03.03/3
 :END:
 ** M71W01FO
 :Title:
@@ -4697,8 +4697,8 @@ M02E03DF#-fd3m,N03.03/3
 :END:
 :MovesAndTags:
 stock_id,tagm
-M51L07DA^2,W00.01/1#ad7-moved
-M51L07DA#-ad7-moved,W00.02/2
+M51L07DA^2,W00.01/1#7da-moved
+M51L07DA#-7da-moved,W00.02/2
 :END:
 ** M61L05HF
 :Title:
@@ -4857,45 +4857,45 @@ M31L05DA#'LHT#cloned
 stock_id,tagm
 M31L05DA,pending
 M31L05DA#'TLB,#cloned
-M31L05DA#'ZBA,W00.01/2#ad5-moved#mop-exception
-M31L05DA#'CIA*,W00.01/2#ad5-moved#mop-exception
-M31L05DA#'GED*,W00.01/2#ad5-moved#mop-exception
-M31L05DA#'OSE,W00.01/2#ad5-moved#mop-exception
-M31L05DA#'NGF*,W00.01/2#ad5-moved#mop-exception
-M31L05DA#'DOG*,W00.01/2#ad5-moved#mop-exception
-M31L05DA#'RAL,W00.01/2#ad5-moved#mop-exception
-M31L05DA#'CIL*,W03.01/2#ad5-moved#mop-exception
-M31L05DA#'AAM,W03.01/2#ad5-moved#mop-exception
-M31L05DA#'DAM*,W03.01/2#ad5-moved#mop-exception
-M31L05DA#'RTO,W03.01/2#ad5-moved#mop-exception
-M31L05DA#'REP,W03.01/2#ad5-moved#mop-exception
-M31L05DA#'OIP,W03.01/2#ad5-moved#mop-exception
-M31L05DA#'OIP*,W03.01/2#ad5-moved#mop-exception
-M31L05DA#'GAS,W03.01/2#ad5-moved#mop-exception
-M31L05DA#'NAS*,W03.01/2#ad5-moved#mop-exception
-M31L05DA#'NAT*,W03.01/2#ad5-moved#mop-exception
-M31L05DA#'OAT,W03.01/2#ad5-moved#mop-exception
-M31L05DA#'LET,W03.01/2#ad5-moved#mop-exception
-M31L05DA#'LET*,W03.01/2#ad5-moved#mop-exception
-M31L05DA#'LHT,W03.01/2#ad5-moved#mop-exception
-M31L05DA#-ad5-moved,#'l=5500#'w=5400#'h=3600
-M31L05DA#-ad5-moved^1,#ad5m
+M31L05DA#'ZBA,W00.01/2#5da-moved#mop-exception
+M31L05DA#'CIA*,W00.01/2#5da-moved#mop-exception
+M31L05DA#'GED*,W00.01/2#5da-moved#mop-exception
+M31L05DA#'OSE,W00.01/2#5da-moved#mop-exception
+M31L05DA#'NGF*,W00.01/2#5da-moved#mop-exception
+M31L05DA#'DOG*,W00.01/2#5da-moved#mop-exception
+M31L05DA#'RAL,W00.01/2#5da-moved#mop-exception
+M31L05DA#'CIL*,W03.01/2#5da-moved#mop-exception
+M31L05DA#'AAM,W03.01/2#5da-moved#mop-exception
+M31L05DA#'DAM*,W03.01/2#5da-moved#mop-exception
+M31L05DA#'RTO,W03.01/2#5da-moved#mop-exception
+M31L05DA#'REP,W03.01/2#5da-moved#mop-exception
+M31L05DA#'OIP,W03.01/2#5da-moved#mop-exception
+M31L05DA#'OIP*,W03.01/2#5da-moved#mop-exception
+M31L05DA#'GAS,W03.01/2#5da-moved#mop-exception
+M31L05DA#'NAS*,W03.01/2#5da-moved#mop-exception
+M31L05DA#'NAT*,W03.01/2#5da-moved#mop-exception
+M31L05DA#'OAT,W03.01/2#5da-moved#mop-exception
+M31L05DA#'LET,W03.01/2#5da-moved#mop-exception
+M31L05DA#'LET*,W03.01/2#5da-moved#mop-exception
+M31L05DA#'LHT,W03.01/2#5da-moved#mop-exception
+M31L05DA#-5da-moved,#'l=5500#'w=5400#'h=3600
+M31L05DA#-5da-moved^1,#ad5m
 M31L05DA#'AUF*,#-ad5m
 M31L05DA#'TLS*,#-ad5m
 M31L05DA#'ONI*,#-ad5m
 M31L05DA#'AUF^1,#ad5m
 M31L05DA#'TLS^1,#ad5m
 M31L05DA#'ONI^1,#ad5m
-#ad5m,^W02.06/[12]#ad5-moved
-#ad5m#-ad5-moved,^W02.07/[12]#ad5-moved
-#ad5m#-ad5-moved,^W02.08/[12]#ad5-moved
+#ad5m,^W02.06/[12]#5da-moved
+#ad5m#-5da-moved,^W02.07/[12]#5da-moved
+#ad5m#-5da-moved,^W02.08/[12]#5da-moved
 :END:
 :Deletes:
-M31L05DA#cloned#-ad5-moved
+M31L05DA#cloned#-5da-moved
 :END:
 :MovesAndTags:
 stock_id,tagm
-M31L05DA#-ad5-moved,W02.0[678]/3|W00.01/3|W00.02/2
+M31L05DA#-5da-moved,W02.0[678]/3|W00.01/3|W00.02/2
 :END:
 :Orientations:
 stock_id,orientation
@@ -5335,9 +5335,9 @@ M31L03FA#'LHT#cloned
 :END:
 :MovesAndTags:
 stock_id,tagm
-M31L03FA#'l=6400^1,#first-af3#@content=50
-M31L03FA#-first-af3,#@content=100
-M31L03FA#cloned#-first-af3,#@content=1000
+M31L03FA#'l=6400^1,#first-3fa#@content=50
+M31L03FA#-first-3fa,#@content=100
+M31L03FA#cloned#-first-3fa,#@content=1000
 M31L03FA,pending
 M31L03FA#'l=6400,#'w=3700
 M31L03FA#'TRG,#'l=6400#'w=3700#'h=3000
@@ -5368,19 +5368,19 @@ M31L03FA#'KHC^2,#af3m
 M31L03FA#'YAC^2,#af3m
 M31L03FA#'ZQM^2,#af3m
 M31L03FA#'LOC^2,#af3m
-#af3m,^W04.01/[12]#af3-moved
-#af3m#-af3-moved,^W04.02/[12]#af3-moved
-#af3m#-af3-moved,^W04.03/[12]#af3-moved
-#af3m#-af3-moved^^^12,^W04.04/[12]#af3-moved
-#af3m#-af3-moved,W04.04/1#af3-moved
+#af3m,^W04.01/[12]#3fa-moved
+#af3m#-3fa-moved,^W04.02/[12]#3fa-moved
+#af3m#-3fa-moved,^W04.03/[12]#3fa-moved
+#af3m#-3fa-moved^^^12,^W04.04/[12]#3fa-moved
+#af3m#-3fa-moved,W04.04/1#3fa-moved
 :END:
 :Deletes:
-M31L03FA#cloned#-af3-moved
+M31L03FA#cloned#-3fa-moved
 :END:
 :MovesAndTags:
 stock_id,tagm
-#af3small,W04.0[1234]/1#af3-moved
-M31L03FA#-af3-moved,W04.0[1234]/3
+#af3small,W04.0[1234]/1#3fa-moved
+M31L03FA#-3fa-moved,W04.0[1234]/3
 :END:
 :Orientations:
 stock_id,orientation
@@ -5433,8 +5433,8 @@ M02L03PD,W04.06/2
 :END:
 :MovesAndTags:
 stock_id,tagm
-M71W03FR^^^4,W04.06/2#rf3-moved
-M71W03FR#-rf3-moved,ignore
+M71W03FR^^^4,W04.06/2#3fr-moved
+M71W03FR#-3fr-moved,ignore
 :END:
 ** M91L05DC
 :Title:
@@ -5628,22 +5628,22 @@ M31L01FC#'TLS,#1th
 M31L01FC#'TWT,#1th
 M31L01FC#'TIV,#1th
 M31L01FC#'AIW,#1th
-M31L01FC^1,#cf1-slot
-M31L01FC#1th,#-cf1-slot
-M31L01FC#4th,#-cf1-slot
-M31L01FC#cf1-slot,#@style=100
-M31L01FC#'YAN^3,#cf1-slot
-M31L01FC#'YVI^3,#cf1-slot
-M31L01FC#'RIS^3,#cf1-slot
-M31L01FC#'YAC^2,#cf1-slot
-M31L01FC#'RAS^3,#cf1-slot
-M31L01FC#'AUF^3,#cf1-slot
-M31L01FC#'KLB^3,#cf1-slot
-M31L01FC#'THW^2,#cf1-slot
-M31L01FC#'KHC^2,#cf1-slot
+M31L01FC^1,#1fc-slot
+M31L01FC#1th,#-1fc-slot
+M31L01FC#4th,#-1fc-slot
+M31L01FC#1fc-slot,#@style=100
+M31L01FC#'YAN^3,#1fc-slot
+M31L01FC#'YVI^3,#1fc-slot
+M31L01FC#'RIS^3,#1fc-slot
+M31L01FC#'YAC^2,#1fc-slot
+M31L01FC#'RAS^3,#1fc-slot
+M31L01FC#'AUF^3,#1fc-slot
+M31L01FC#'KLB^3,#1fc-slot
+M31L01FC#'THW^2,#1fc-slot
+M31L01FC#'KHC^2,#1fc-slot
 M31L01FC#4th^1,W05.0[1-3]/2/aab#BG#bg=lightgreen#done
 M31L01FC#1th^1,W05.0[1-3]/1#BG#bg=pink#done
-M31L01FC#cf1-slot,^W05.01/1/aab|W05.01/2 ^W05.02/1/aab|W05.02/2 ^W05.03/1/aab|W05.03/2#done
+M31L01FC#1fc-slot,^W05.01/1/aab|W05.01/2 ^W05.02/1/aab|W05.02/2 ^W05.03/1/aab|W05.03/2#done
 M31L01FC#-done#-cloned,W05.0[1-6]/3|W06.*/3
 :END:
 :ShelfJoin:
@@ -5705,8 +5705,8 @@ M51W05BG,W05.06/1
 :END:
 :MovesAndTags:
 stock_id,tagm
-M51W02HP^1,W05.06/1#ph2-moved
-M51W02HP#-ph2-moved,W05.06/3
+M51W02HP^1,W05.06/1#2hp-moved
+M51W02HP#-2hp-moved,W05.06/3
 :END:
 ** M81W02PC
 :Title:
@@ -5811,8 +5811,8 @@ M81L07FT,W06.03/1
 :END:
 :MovesAndTags:
 stock-id,tagm
-M31L02DD,^W07.01/[2]#dd2-moved
-M31L02DD#-dd2-moved,^W07.01/[3]
+M31L02DD,^W07.01/[2]#2dd-moved
+M31L02DD#-2dd-moved,^W07.01/[3]
 :END:
 ** M71E03PT
 :Title:
@@ -5834,12 +5834,12 @@ M51W02HC,^W07.01/[12]
 :MovesAndTags:
 stock_id,tagm
 M31L01FH,pending
-M31L01FH#'l=5400,#hf1-small
+M31L01FH#'l=5400,#1fh-small
 M31L01FH#'l=6400,#'l=7900
-#hf1-small,W07.01/[12]#hf1-moved
-M31L01FH#-hf1-moved,^W07.02/[12]#hf1-moved
-M31L01FH#-hf1-moved,^W07.03/[12]#hf1-moved
-M31L01FH#-hf1-moved,^W07.04/[12]#hf1-moved
+#1fh-small,W07.01/[12]#1fh-moved
+M31L01FH#-1fh-moved,^W07.02/[12]#1fh-moved
+M31L01FH#-1fh-moved,^W07.03/[12]#1fh-moved
+M31L01FH#-1fh-moved,^W07.04/[12]#1fh-moved
 :END:
 :Orientations:
 stock_id,orientations
@@ -5960,18 +5960,18 @@ M61W01SH,1'
 :END:
 :MovesAndTags:
 stock_id,tagm
-M51L02SA#'h=3000^1,#as2-30
-M51L02SA#'KLB^3,#as2-30
-M51L02SA#'KHC^2,#as2-30
-M51L02SA#'LOC^2,#as2-30
-M51L02SA#'OLF^2,#as2-30
-M51L02SA#'YVI^2,#as2-30
-M51L02SA#'YAN^3,#as2-30
-M51L02SA#'OIP^2,#as2-30
-M51L02SA#'RAS^2,#as2-30
-M51L02SA#'RIS^2,#as2-30
-M51L02SA#'THW^2,#as2-30
-M51L02SA#as2-30,^W11.0[12]/[12345]
+M51L02SA#'h=3000^1,#2sa-30
+M51L02SA#'KLB^3,#2sa-30
+M51L02SA#'KHC^2,#2sa-30
+M51L02SA#'LOC^2,#2sa-30
+M51L02SA#'OLF^2,#2sa-30
+M51L02SA#'YVI^2,#2sa-30
+M51L02SA#'YAN^3,#2sa-30
+M51L02SA#'OIP^2,#2sa-30
+M51L02SA#'RAS^2,#2sa-30
+M51L02SA#'RIS^2,#2sa-30
+M51L02SA#'THW^2,#2sa-30
+M51L02SA#2sa-30,^W11.0[12]/[12345]
 M51L02SA#'h=3000/C[123]|pending|error,W11.0[12]/6|W10.01/6|W08.0[12]/3
 M51L02SA#'AQA*#'h=1000,E27.03/2#mop-exception
 M51L02SA#'LTW*#'h=1000,E27.03/2#mop-exception
@@ -5995,10 +5995,10 @@ M61L02XA^1,#ax2m
 M61L02XA#'YAN^2,#ax2m
 M61L02XA#'KLB^2,#ax2m
 M61L02XA#'RIS^2,#ax2m
-#ax2m,^W12.01/[123]#ax2-moved
-#ax2m#-ax2-moved,^W12.02/[123]#ax2-moved
-#ax2m#-ax2-moved,^W13.01/[123]#ax2-moved
-#ax2m#-ax2-moved,^W13.02/[123]#ax2-moved
+#ax2m,^W12.01/[123]#2xa-moved
+#ax2m#-2xa-moved,^W12.02/[123]#2xa-moved
+#ax2m#-2xa-moved,^W13.01/[123]#2xa-moved
+#ax2m#-2xa-moved,^W13.02/[123]#2xa-moved
 #ax2m#'LET,#ax2mtl#mop-exception
 #ax2m#'QUT,#ax2mtl#mop-exception
 #ax2m#'TWT,#ax2mtl#mop-exception
@@ -6008,8 +6008,8 @@ M61L02XA#'RIS^2,#ax2m
 #ax2m#'AIW,#ax2mtl#mop-exception
 #ax2m#'LTW,#ax2mtl#mop-exception
 #ax2m#'WEY,#ax2mtl#mop-excepti
-#ax2mtl^1,^W11.03/[123]#ax2-moved
-M61L02XA#-ax2-moved,W1[23].0[12]/4
+#ax2mtl^1,^W11.03/[123]#2xa-moved
+M61L02XA#-2xa-moved,W1[23].0[12]/4
 :END:
 ** C21M01PS
 :Title:
@@ -6082,9 +6082,9 @@ M02E03PA,W05.06/2
 :END:
 :MovesAndTags:
 stock_id,tagm
-M02E07DZ^3,^W06.01/[1]#zd7-moved
-M02E07DZ/pending|error,#-zd7-moved
-M02E07DZ#-zd7-moved,W06.01/3
+M02E07DZ^3,^W06.01/[1]#7dz-moved
+M02E07DZ/pending|error,#-7dz-moved
+M02E07DZ#-7dz-moved,W06.01/3
 :END:
 ** M02E06HZ
 :Title:
@@ -6153,8 +6153,8 @@ stock_id,tagm
 :END:
 :MovesAndTags:
 stock_id,tagm
-M02L06DM^3,^W05.05/[12]#md4-moved
-M02L06DM#-md4-moved,W05.05/3
+M02L06DM^3,^W05.05/[12]#4dm-moved
+M02L06DM#-4dm-moved,W05.05/3
 M02L06DM,#mop-comment=TAKE TO OFFICE UNLESS TICKED#mop-no-exception
 :END:
 :Orientations:
@@ -6167,9 +6167,9 @@ M02L06DM,3=
 :MovesAndTags:
 stock_id,tagm
 M02L09DA^2,#ad9m
-#ad9m,^W03.02/[12]#ad9-moved
-#ad9m#-ad9-moved,^W03.03/[12]#ad9-moved
-M02L09DA#-ad9-moved,W03.0[23]/3
+#ad9m,^W03.02/[12]#9da-moved
+#ad9m#-9da-moved,^W03.03/[12]#9da-moved
+M02L09DA#-9da-moved,W03.0[23]/3
 :END:
 :Orientations:
 stock_id,orientation
@@ -6233,9 +6233,9 @@ stock_id,location
 M22L07DL#first,#@start=new-slot
 M22L07DL#'l=6000,#'l=6800#small
 M22L07DL^2,#ld7m
-#ld7m#'[N-Z]*^2,#ld7-other
-#ld7m#-ld7-other,^E06.01/[12]#moved
-#ld7m#ld7-other,^E05.04/2#moved
+#ld7m#'[N-Z]*^2,#7dl-other
+#ld7m#-7dl-other,^E06.01/[12]#moved
+#ld7m#7dl-other,^E05.04/2#moved
 M22L07DL#-moved,E06.01/[3] E05.0[1234]/4
 M22L07DL#small,#'l=6000
 M22L08DG^1,E07.06/[12]#moved
