--- a/data/c1.org
+++ b/data/c1.org
@@ -7649,86 +7649,86 @@ M61L03DE
                       | to N02.0[23]/*
 M61L01DP
   to pending4
-  # | to - W03.04/[12]
-    | to error
+  | to - W03.04/[12]
+  | to error
 #batch=M 
-  /* | #-first to C2
-     | #first tam @C1
-  --------------------------------------------------
-  /* | #first
-         | M52L04FC
-            .~ M22L08DG
-                   to pending
-                   # | ^1 | to E07.06/2
-                     | to E07.06/3
-                     | to error
-            # | to E07.06/1
-              | to E07.06/3
-              | to error
-         | M52L03DO
-             .~ M02E03DF
-                  to pending*
-                M32L01DT 
-                    in N03.03/[12] | tam ^@N03.03/[12] with x2x|=
-                                   | to error
-             # | to N03.03/[12]
-         | M52L01DJ
-             .~ M22W09DX to N02.01/[12]
-             to E07.01/[12]
-         | M52L02DO
-             .~ in W06.04/* to pending3 
-             to W06.04/1
-         | M52L01DG
-             to above W07.04/[12]
-         | M52L04HB
-             .~ in W03.01/[12] to pending 3
-             to W03.01/1
-         | M52L02DL
-             to W03.01/2
-         | M52L04PB
-             tam ^W07.01/[12]
-                .~ M02L05DK to right W07.01/[12]
-         | M52L01HG
-             .~ in W03.06/2 to pending 3
-             to W03.06/2
-         | M52L01HM
-             to E01.01/1
-         | M52L01PP
-             to E07.01/2
-         | M52L04FB
-             to orules x2x|= E01.07/1
-         | M52L04DB
-             .~ in E30.01/1 to pending3
-             to E30.01/1
-         | M52L03HK
-             to E01.07/2
-         | M52L01PM
-             to E30.01/2
-         | M71L07PF
-             to W03.01/1
-         | M52L02HH
-             to W03.04/2
-         | M52L01PJ
-             to W05.04/1
-         | M52L02XH
-              to W07.04/2
-         | M52L02DH
-              to W08.02/1
-         | M52L02DP
-              .~ in W04.05/1 tam @W04.05/1
-              to W04.05/1
-         | M52L03DK
-              .~ in W00.01/1 tam @W00.01/1
-              to W00.01/1
-         | M52L01FP
-              to E30.01/1
-         | M52L01HS
-              to E01.06/1
-         | M52L01DM
-              to W06.01/1
-         | M52L04DK
-             to -| W00.02/1
-         | M52L01PG
+   | #-first to C2
+   | #first tam @C1
+  ------------------------------------------------
+   | #first
+       | M52L04FC
+          .~ M22L08DG
+                 to pending
+                 # | ^1 | to E07.06/2
+                   | to E07.06/3
+                   | to error
+          | to E07.06/1
+          | to E07.06/3
+          | to error
+       | M52L03DO
+           .~ M02E03DF
+                to pending*
+              M32L01DT 
+                  in N03.03/[12] | tam ^@N03.03/[12] with x2x|=
+                                 | to error
+           | to N03.03/[12]
+       | M52L01DJ
+           .~ M22W09DX to N02.01/[12]
+           to E07.01/[12]
+       | M52L02DO
+           .~ in W06.04/* to pending3 
+           to W06.04/1
+       | M52L01DG
+           to above W07.04/[12]
+       | M52L04HB
+           .~ in W03.01/[12] to pending 3
+           to W03.01/1
+       | M52L02DL
+           to W03.01/2
+       | M52L04PB
+           tam ^W07.01/[12]
+              .~ M02L05DK to right W07.01/[12]
+       | M52L01HG
+           .~ in W03.06/2 to pending 3
+           to W03.06/2
+       | M52L01HM
+           to E01.01/1
+       | M52L01PP
+           to E07.01/2
+       | M52L04FB
+           to orules x2x|= E01.07/1
+       | M52L04DB
+           .~ in E30.01/1 to pending3
+           to E30.01/1
+       | M52L03HK
+           to E01.07/2
+       | M52L01PM
+           to E30.01/2
+       | M71L07PF
+           to W03.01/1
+       | M52L02HH
+           to W03.04/2
+       | M52L01PJ
+           to W05.04/1
+       | M52L02XH
+            to W07.04/2
+       | M52L02DH
+            to W08.02/1
+       | M52L02DP
+            .~ in W04.05/1 tam @W04.05/1
+            to W04.05/1
+       | M52L03DK
+            .~ in W00.01/1 tam @W00.01/1
+            to W00.01/1
+       | M52L01FP
+            to E30.01/1
+       | M52L01HS
+            to E01.06/1
+       | M52L01DM
+            to W06.01/1
+       | M52L04DK
+           to -| W00.02/1
+       | M52L01PG
              to W00.02/1
 :END:
 
