Feat(WPL): Add shelfcase (// and '/ ') and ||
|| a b same as | (a b)
/ shelf case (space is important
// a b same as / (a b)
Also allow indented block after &, such as

   & | a
     | b
   & c

--- a/data/c1.org
+++ b/data/c1.org
@@ -5143,7 +5143,10 @@ M51W01CE
   to pending*
   to best W03.05/1
 orules xx2|= -- 3FA
-       /W04.01/[23]|W04.0[34]/[12] foreach:shelf in:shelves tam @
+       & /W04.*/*
+       & / W04.01/[23]
+         / W04.0[34]/[12]
+       & foreach:shelf in:shelves tam @
        -- ^^^^^^^^^^^ this is equivalent to below
        -- in W04.01/2 tam @W04.01/2
        -- in W04.01/3 tam @W04.01/3
